--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ h1 {
 header {
 	background: var(--header);
 	color: white;
+	display: flex;
+	flex-direction: row;
 }
 body {
 	background: var(--body);
@@ -28,10 +30,13 @@ body {
 }
 #content {
 	width: 100%;
-	height: 300px;
+	border-radius: 15px;
+	min-height: 300px;
+	height: auto;
 	background: #dfe796;
-
-	/* margin: 10px; */
+	box-sizing: border-box;
+	padding: 0 20px;
+	margin-bottom: 20px;
 }
 .stack {
 	background: var(--head);
@@ -81,4 +86,30 @@ body {
 }
 .invisible {
 	display: none;
+}
+
+.nav {
+	margin-left: auto;
+	margin-right: 20px;
+	background: #0c524f;
+}
+.nav a {
+	color: white;
+}
+#codebox {
+	width: 100%;
+	border-radius: 15px;
+	min-height: 300px;
+	height: auto;
+	width: auto;
+	overflow: hidden;
+	background: #dfe796;
+	box-sizing: border-box;
+	padding: 20px 20px;
+}
+#code {
+	background: rgb(14, 13, 13);
+	color: white;
+	padding: 2px;
+	border: 1px solid white;
 }
